k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nst-init
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nst-init
  template:
    metadata:
      labels:
        app: nst-init
    spec:
      serviceAccountName: nst-init
      containers:
        - name: nst-init
          image: ghcr.io/krushndayshmookh/nst-init:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nst-init
  namespace: apps
spec:
  selector:
    app: nst-init
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nst-init-ing
  namespace: apps
spec:
  rules:
    - host: init.nstsdc.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nst-init
                port:
                  number: 80
